...
                            mainAxisSize: MainAxisSize.max,
                            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                            children: [
                              Container(
                                width: 300.0,
                                child: TextFormField(
                                  key: ValueKey('SU-Email_e48h'),
                                  controller: _model.sUEmailTextController,
                                  focusNode: _model.sUEmailFocusNode,
                                  autofocus: false,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    isDense: true,
...
                                      .asValidator(context),
                                ),
                              ),
                              Container(
                                width: 300.0,
                                child: TextFormField(
                                  key: ValueKey('SU-Password_92ks'),
                                  controller: _model.sUPasswordTextController,
                                  focusNode: _model.sUPasswordFocusNode,
                                  autofocus: false,
                                  obscureText: !_model.sUPasswordVisibility,
                                  decoration: InputDecoration(
                                    isDense: true,
...
                                      .asValidator(context),
                                ),
                              ),
                              Container(
                                width: 300.0,
                                child: TextFormField(
                                  key: ValueKey('TextField_s2l2'),
                                  controller:
                                      _model.confirmPasswordTextController,
                                  focusNode: _model.textFieldFocusNode,
                                  autofocus: false,
                                  obscureText: !_model.passwordVisibility,
                                  decoration: InputDecoration(
...
                    ),
                  ),
                  Padding(
                    padding:
                        EdgeInsetsDirectional.fromSTEB(0.0, 50.0, 0.0, 0.0),
                    child: FFButtonWidget(
                      key: ValueKey('Button_2x3f'),
                      onPressed: () async {
                        logFirebaseEvent('SIGNUP_PAGE_PAGE_SUBMIT_BTN_ON_TAP');
                        logFirebaseEvent('Button_validate_form');
                        if (_model.formKey.currentState == null ||
                            !_model.formKey.currentState!.validate()) {
                          return;
...
