...
                            padding: EdgeInsetsDirectional.fromSTEB(
                                24.0, 24.0, 24.0, 24.0),
                            child: Column(
                              mainAxisSize: MainAxisSize.min,
                              children: [
                                TextFormField(
                                  key: ValueKey('TextField_l7tb'),
                                  controller: _model.emailTextController,
                                  focusNode: _model.textFieldFocusNode1,
                                  autofocus: false,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    isDense: true,
...
                                  cursorColor:
                                      FlutterFlowTheme.of(context).primaryText,
                                  validator: _model.emailTextControllerValidator
                                      .asValidator(context),
                                ),
                                TextFormField(
                                  key: ValueKey('TextField_jg6d'),
                                  controller: _model.passwordTextController,
                                  focusNode: _model.textFieldFocusNode2,
                                  autofocus: false,
                                  obscureText: !_model.passwordVisibility,
                                  decoration: InputDecoration(
                                    isDense: true,
...
                                                    .fontStyle,
                                          ),
                                    ),
                                  ],
                                ),
                                FFButtonWidget(
                                  key: ValueKey('Button_j5sl'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'AUTH_PAGE_PAGE_SIGN_IN_BTN_ON_TAP');
                                    logFirebaseEvent('Button_auth');
                                    GoRouter.of(context).prepareAuthEvent();

...
                                        logFirebaseEvent('Text_navigate_to');

                                        context.pushNamed(
                                            SignupPageWidget.routeName);
                                      },
                                      child: Text(
                                        key: ValueKey('Text_o9jr'),
                                        'Sign Up',
                                        style: FlutterFlowTheme.of(context)
                                            .bodyMedium
                                            .override(
                                              font: GoogleFonts.exo2(
                                                fontWeight: FontWeight.w600,
...
