...
          getRemoteConfigString('lightmode_background'),
          defaultColor: Color(0xFFC155FF),
        ),
        floatingActionButton: Align(
          alignment: AlignmentDirectional(1.0, 0.85),
          child: FloatingActionButton(
            key: ValueKey('FloatingActionButton_csqu'),
            onPressed: () async {
              logFirebaseEvent('DREAM_LIST_FloatingActionButton_k6pec3yo');
              logFirebaseEvent('FloatingActionButton_navigate_to');

              context.pushNamed(AddDreamWidget.routeName);

...
                  mainAxisSize: MainAxisSize.max,
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Align(
                      alignment: AlignmentDirectional(0.0, 0.0),
                      child: Text(
                        key: ValueKey('DreamFeedText_mlb9'),
                        'Dream Feed',
                        style: FlutterFlowTheme.of(context)
                            .displayLarge
                            .override(
                              font: GoogleFonts.exo2(
                                fontWeight: FlutterFlowTheme.of(context)
...
