...
                        itemBuilder: (context, listViewIndex) {
                          final listViewDreamsRecord =
                              listViewDreamsRecordList[listViewIndex];
                          return Padding(
                            padding: EdgeInsets.all(6.0),
                            child: Container(
                              key: ValueKey('Dream_p4rs'),
                              child: InkWell(
                                splashColor: Colors.transparent,
                                focusColor: Colors.transparent,
                                hoverColor: Colors.transparent,
                                highlightColor: Colors.transparent,
                                onTap: () async {
...
